# openapi-client-generator

./: .gitignore  README.md  generate_python_client.py  openapi.json  pyproject.toml  test_script.py
openapi_client_generator/: schema_utils.py  string_utils.py
templates/: README_template.j2  async_client_template.j2  client_template.j2  model_module_template.j2  model_template.j2  pyproject_template.j2  requirements_template.j2
