[tool.poetry]
name = "openapi-client-generator"
version = "0.1.0"
description = ""
authors = ["Philipp Zettl"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
Jinja2 = "^3.1.4"
openapi-spec-validator = "^0.7.1"
data-sink-api-client = {path = "data_sink_api_client"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
