[tool.poetry]
name = "openapi-client-generator"
version = "0.1.0"
description = ""
authors = ["Philipp Zettl"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
jinja2 = "^3.1.6"
openapi-spec-validator = "^0.7.1"
build = "^1.2.2.post1"
twine = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
